# Separatrix

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
agent_attrib_spike/: .gitignore  PREREGISTRATION.md  README.md  TASK1_FEASIBILITY.md  build_manifest.py  faults.py  llm.py  manifest.json  replay.py  reproduce.sh  requirements.txt  results.json  run_experiment.py  score.py  signals.py  test_score.py  testbed.py
docs/: PAPER_FINDINGS.md  PHASEB_PREREG.md  PHASEB_RESULT.md  THEORY_EVIDENCE.md
separatrix/analyzer/: builder.cpp  builder.h
separatrix/cli/: main.cpp  sep_ablate.py  sep_eval.py  sep_run.py
separatrix/detector/: metric.py
separatrix/engine/: perturb.py  priors.py
separatrix/eval/: eval_metrics.py  ground_truth.py  predictors.py  sbfl.py
separatrix/eval/targets/libpng/: build.sh  gen_perturbed.sh  png_harness.c
separatrix/eval/targets/lua/: build.sh  extract_bugs.py  gen_corpus.py  gen_corpus_blind.py  lua_harness.c  magma_canary.h  magma_stub.c
separatrix/eval/targets/md4c/: README.md  bugs.json  build.sh  suite_eval.py
separatrix/eval/targets/sqlite3/: README.md  build.sh  func_eval.py  gen_corpus.py  gen_corpus_blind.py  sql_harness.c
separatrix/ir/: graph.cpp  graph.h
separatrix/runtime/: sep_rt.c
separatrix/test/: phase1_e2e.sh  phase2_e2e.sh  phase3_e2e.sh  phase4_e2e.sh  probe_triggers.py  test_canary_trigger.sh  test_eval_metrics.py  test_ground_truth.py  test_metric_localize.py  test_metric_scale.py  test_predictors.py  test_sbfl.py  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py
(+68 files in other folders)
